# pyproject.toml

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ImageTranslation"
version = "0.1.0"
description = "Flask Application"
authors = ["Gautam pahwa"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
opencv-python = "^4.5.3"
numpy = "^1.20.3"
requests = "^2.26.0"
deep-translator = "^1.5.1"

[tool.poetry.dev-dependencies]
